# academic-report-analyzer

./: .gitignore  LICENSE  README.md  docker-compose-prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/auth/: auth_bearer.py  auth_handler.py
backend/app/core/: config.py  gunicorn_conf.py
backend/app/routers/: authentication.py  book_from_subject.py  comparison.py  export.py  rdf.py
backend/app/schemas/: book_from_subject_schema.py  comparison_schema.py  login_schema.py  rdf_schema.py  token_schema.py
backend/app/services/: book_from_subject_service.py  book_list_extractor_service.py  comparison_service.py  export_service.py  file_service.py  list_book_compare_service.py  rdf_service.py  report_service.py  themes_service.py
backend/app/tests/: test_cors.py
backend/tests/: tests_rdf.py
frontend/: Dockerfile  README.md  dockerfile  index.html  package-lock.json  package.json
frontend/src/: api.js  app.css  app.jsx  index.css  main.jsx  theme.js  utils.js
frontend/src/assets/: book_response.json
frontend/src/components/: AppBar.jsx  BiblioTable.jsx  ComplexeTable.jsx  EquipmentList.jsx  FileDropZone.jsx  GraphComponent.jsx  ReportTable.jsx  ReportsTable.jsx  SearchBar.jsx  SubjectsFilterButtons.jsx
frontend/src/components/fileDropZone/: FileDropZone.jsx
frontend/src/components/shared/: AutoComplete.jsx  LoadingButton.jsx  MultipleSelectChip.jsx  (+2 more)
frontend/src/pages/: BiblioResultPage.jsx  HomePage.jsx  RelatedConceptPage.jsx  ReportResultPage.jsx  ResultPage.jsx
frontend/src/services/: AuthService.js  ExportService.js  RdfService.js  comparisonService.js  exportService.js
nginx/: nginx.conf.template  start-nginx.sh
(+3 files in other folders)
